# forensic-log-tracker

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  flt.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/: FUNDING.yml
.github/workflows/: test.yml
Planning/: ToDo
config/: config.yaml  explanations.yaml
core/: case_manager.py  executor.py  gpg_signer.py  hasher.py  legal_parser.py  legalizer.py  logger.py
forensic_log_tracker/: __init__.py  cli.py
templates/: legal.md.j2
test/: conftest.py  test_case_manager.py  test_commenter.py  test_executor.py  test_gpg_signer.py  test_hasher.py  test_legal_parser.py  test_legalizer.py  test_logger.py
useful_scripts/: README.md  storage_generation.sh
utils/: commenter.py  log.py  pathing.py  reporting.py  shared_config.py
