[project]
name = "forensic-log-tracker"
version = "1.0.0"
description = "CLI tool for secure and legally compliant forensic log tracking"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Niklas Heringer", email = "ping@niklas-heringer.com"}]
dependencies = [
    "click==8.1.8",
    "colorama==0.4.6",
    "Jinja2==3.1.6",
    "logger==1.4",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "pagefind==1.3.0",
    "pagefind_bin_extended==1.3.0",
    "Pygments==2.19.1",
    "PyYAML==6.0.2",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "typer==0.15.2",
    "typing_extensions==4.13.2"
]

[project.urls]
Homepage = "https://github.com/mev0lent/forensic-log-tracker"

[project.scripts]
flt = "cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils", "core", "config"]
